--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "uuidv4": "^6.2.13",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
