--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Create .env file
               run: echo "NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }}" >> .env && echo "NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }}" >> .env && echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env && echo "GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}" >> .env && echo "RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}" >> .env && echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env && echo "SITE_URL=${{ secrets.SITE_URL }}" >> .env
             - name: Build docker image
-              run: docker build -t jarrodschilling/trade_stats_pro
+              run: docker build -t jarrodschilling/trade_stats_pro .
             - name: Login to docker hub
               run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
             - name: Publish image to docker hub
