--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.0",
     "resend": "^3.5.0",
     "sharp": "^0.33.5",
+    "swr": "^2.2.5",
     "uuidv4": "^6.2.13",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
